# mariadb-drive-dump

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
config/: config_example.ini
mariadb_drive_dump/: __init__.py  __main__.py  config.py  crypto.py  dump.py  google_drive.py  job.py  maintenance.py  utils.py
mariadb_drive_dump/config/: config.ini
mariadb_drive_dump/utils/: config.py  crypto.py  google_drive.py  gzip.py  maintenance.py  new_encryption_key.py  utils.py
tests/: test_mariadb_drive_dump.py
