[tool.poetry]
name = "mariadb-drive-dump"
version = "0.2.0"
description = ""
authors = ["Manchineel <manchineel@infinitedesert.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyDrive2 = "^1.14.0"
cryptography = "^37.0.4"
pycron = "^3.0.0"
python-dateutil = "^2.8.2"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
